--- a/qr1.html
+++ b/qr1.html
@@ -15,10 +15,10 @@
 
 <body>
     <div id = "contents">
-        <img id="image_file" src="img/QRsample0.JPG" onclick="henkou()">
+        <img id="image_file" src="QRsample0.JPG" onclick="henkou()">
 
         <script>
-          var img_src = new Array("img/QRsample0.JPG","img/qrsample1.JPG");
+          var img_src = new Array("QRsample0.JPG","qrsample1.JPG");
           var i = 0;
     
           function henkou() {
